Add JVM flags to allow LWJGL 2 to access macOS AWT internals